website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: website
