website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
  annotations:
    cert-manager.io/issuer: letsencrypt-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - ap4y.me
    secretName: ap4y-me-certificate
  rules:
  - host: ap4y.me
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 8000
